<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import
            alias="v"
            type="android.view.View" />

        <variable
            name="dateBefore"
            type="String" />

        <variable
            name="dateAfter"
            type="String" />

        <variable
            name="viewModel"
            type="com.arcadone.cheers.ui.mainFragment.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.mainfragment.MainFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cheersbanner" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pick_after_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/icons"
            android:hint="@string/after"
            android:textColorHint="@color/colorText"
            app:icon="@drawable/ic_baseline_calendar_today_24"
            app:layout_constraintEnd_toStartOf="@+id/after_date_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/after_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="MMM, yyyy"
            android:text="@{dateAfter}"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/pick_after_date_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancel_after_date"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pick_after_date_button"
            app:layout_constraintTop_toTopOf="@+id/pick_after_date_button" />

        <ImageView
            android:id="@+id/cancel_after_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/after_date_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/after_date_text"
            app:layout_constraintTop_toTopOf="@+id/after_date_text"
            app:srcCompat="@drawable/ic_baseline_cancel_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pick_before_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/icons"
            android:hint="@string/before"
            android:textColorHint="@color/colorText"
            app:icon="@drawable/ic_baseline_calendar_today_24"
            app:layout_constraintEnd_toStartOf="@+id/before_date_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pick_after_date_button" />

        <TextView
            android:id="@+id/before_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="MMM, yyyy"
            android:text="@{dateBefore}"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/pick_before_date_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancel_before_date"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pick_before_date_button"
            app:layout_constraintTop_toBottomOf="@+id/pick_after_date_button" />

        <ImageView
            android:id="@+id/cancel_before_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/before_date_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/before_date_text"
            app:layout_constraintTop_toTopOf="@+id/before_date_text"
            app:srcCompat="@drawable/ic_baseline_cancel_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/icons"
            android:onClick="@{() -> viewModel.updateUiState()}"
            android:padding="8dp"
            android:text="@string/go"
            android:textSize="24sp"
            app:icon="@drawable/ic_baseline_search_24"
            app:layout_constraintEnd_toEndOf="@+id/cancel_before_date"
            app:layout_constraintStart_toStartOf="@+id/pick_before_date_button"
            app:layout_constraintTop_toBottomOf="@+id/pick_before_date_button" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pick_after_date_button" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:padding="@dimen/big_padding"
            android:background="@color/colorAccent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_date_button"
            tools:listitem="@layout/recyclerview_item" />

        <Button
            android:id="@+id/retryButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="@{() -> viewModel.updateUiState()}"
            android:text="@string/retry"
            android:textColor="@color/colorAccent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_date_button" />

        <ImageView
            android:id="@+id/emptyImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/emptyList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_no_beer" />

        <TextView
            android:id="@+id/emptyList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_list_text"
            android:textColor="@color/colorText"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_date_button" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="180dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>